# foodfeed

./: .gitignore  Makefile  README.md  devfile.yaml  pyproject.toml
.codecatalyst/workflows/: dev_backend.yaml  dev_frontend.yaml  main.yaml  main_fullstack_workflow.yaml
backend/: .gitignore  app.py  requirements-dev.txt  requirements.txt  telegram.py
backend/python/: python_stack.py
backend/python/lambdas/: add_venues.py  authorize.py  consult.py  embedd_and_upload.py  get_venue_items.py  get_venues.py  initialize_opensearch.py  process_venue_items.py  requirements.txt  search.py  send_search_result.py  start_search.py
backend/python/lambdas/dependency/: Dockerfile  ai_client.py  consult_client.py  consultant_client.py  search_client.py  slugify.py  storage_client.py  utils.py  wolt_client.py
backend/python/lambdas/dependency/config/: consultants_settings.py  enricher_settings.py  food_index.py  (+2 more)
backend/python/lambdas/ingestion/: enrich.py  get_venues.py  process_venue_items.py
backend/python/lambdas/search/: consult.py  save_result.py
backend/python/lambdas/telegram/: receive_update.py  send_message.py  setup_webhook.py
backend/python/stacks/: api.py  common.py  ingestion.py  search.py  telegram.py
backend/tests/: conftest.py
backend/tests/unit/cdk/: test_python_stack.py
backend/tests/unit/fixtures/: all_venues.json  single_venue.json  venue_categories.json  venue_category_items.json
backend/tests/unit/lambdas/: test_delete_todo.py  test_get_todo.py  test_get_venues.py  test_get_venues_items.py  test_process_venue_items.py  test_update_todo.py
