[tool.poetry]
name = "foodfeed"
version = "0.1.0"
description = ""
authors = ["evgenii.basmov <coykto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
openai = "^1.3.5"
aws-cdk-lib = "2.111.0"
boto3 = "^1.29.6"
moto = "^4.2.10"
attrs = "^23.1.0"
botocore = "^1.32.6"
certifi = "^2023.11.17"
cffi = "^1.16.0"
constructs = "^10.3.0"
coverage = "^7.3.2"
cryptography = "^41.0.5"
exceptiongroup = "^1.2.0"
idna = "^3.6"
iniconfig = "^2.0.0"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
markupsafe = "^2.1.3"
packaging = "^23.2"
pluggy = "^1.3.0"
publication = "^0.0.3"
py = "^1.11.0"
pycparser = "^2.21"
pyparsing = "^3.1.1"
pytz = "^2023.3.post1"
requests = "^2.31.0"
responses = "^0.24.1"
s3transfer = "^0.7.0"
six = "^1.16.0"
toml = "^0.10.2"
tomli = "^2.0.1"
werkzeug = "^3.0.1"
xmltodict = "^0.13.0"
aws-cdk-aws-lambda-python-alpha = "2.111.0a0"
jsii = "^1.92.0"
opensearch-py = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
